20250415 把panic 測試拆出來 By Timmy
